<resources>
    <string name="app_name">VibraMA</string>
    <string name="seq_title">Please enter license code</string>
    <string name="seq_http">Get answer via HTTP</string>
    <string name="seq_demo">Try DEMO</string>
    <string name="seq_key_main">Private key:</string>
    <string name="seq_key_hash">Hardware hash:</string>
    <string name="seq_key_answ">License:</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This app needs permission:</string>
    <string name="action_settings">Settings</string>
    <string name="menu_account">Account</string>
    <string name="menu_cameras">Camera</string>
    <string name="menu_preset">Preset</string>
    <string name="mode_vi">VI</string>
    <string name="mode_av">AV</string>
    <string name="mode_ar">AR</string>
    <string name="mode_ld">LD</string>
    <string name="menu_view">View</string>
    <string name="view_vi">Video</string>
    <string name="view_main">Main</string>
    <string name="view_m">M</string>
    <string name="view_cfg">Config</string>
    <string name="view_web">M results</string>
    <string name="action_reset">Reset</string>
    <string name="action_measure">Measure</string>
    <string name="ready_measure">Ready</string>
    <string name="processing_measure">Processing</string>
    <string name="camera_back">Back camera</string>
    <string name="camera_front">Front camera</string>
    <string name="camera_settings">Settings</string>
    <string name="defaults_micro">Defaults</string>
    <string name="unregister">Unregister</string>
    <string name="login_title">Please enter login and password</string>
    <string name="login_login">Login:</string>
    <string name="login_pwd">Password:</string>
    <string name="BUTTON_YES">Yes</string>
    <string name="BUTTON_NO">No</string>
    <string name="BUTTON_CANCEL">Cancel</string>
    <string name="BUTTON_CHECK">Check</string>
    <string name="BUTTON_ON">On</string>
    <string name="BUTTON_OFF">Off</string>
    <string name="BUTTON_CAPTURE">Capture</string>
    <string name="INFO_V4_FRAME_RATE">Frame rate</string>
    <string name="INFO_V4_FRAME_RATE_IN">In</string>
    <string name="INFO_V4_FRAME_RATE_IN_FPS">Fps in</string>
    <string name="INFO_V4_FRAME_RATE_OUTF">Fast processing</string>
    <string name="INFO_V4_FRAME_RATE_OUTF_FPS">FPS FP</string>
    <string name="INFO_V4_FRAME_RATE_DROPF">FP Drop</string>
    <string name="INFO_V4_FRAME_RATE_MAXF">Fast processing</string>
    <string name="INFO_V4_FRAME_RATE_OUTR">Base processing</string>
    <string name="INFO_V4_FRAME_RATE_OUTR_FPS">FPS BP</string>
    <string name="INFO_V4_FRAME_RATE_DROPR">BP Drop</string>
    <string name="INFO_V4_FRAME_RATE_MAXR">Base processing</string>
    <string name="INFO_V4_FRAME_RATE_PERIOD">FPS proc. period</string>
    <string name="INFO_V4_FRAME_TIME_VIDEO">Video timer</string>
    <string name="INFO_V4_MAIN">Info</string>
    <string name="INFO_V4_N">N</string>
    <string name="INFO_V4_TH">L</string>
    <string name="INFO_V4_SIZE_W">Width</string>
    <string name="INFO_V4_SIZE_H">Height</string>
    <string name="INFO_V4_STAT">Statistics</string>
    <string name="INFO_V4_INTEGR0A">IntegratedN(Am)</string>
    <string name="INFO_V4_INTEGR1A">Integrated10(Am)</string>
    <string name="INFO_V4_INTEGR2A">Integrated2(Am)</string>
    <string name="INFO_V4_INTEGR0B">IntegratedN(F)</string>
    <string name="INFO_V4_INTEGR1B">Integrated10(F)</string>
    <string name="INFO_V4_INTEGR2B">Integrated2(F)</string>
    <string name="INFO_V4_ANGER">Aggression</string>
    <string name="INFO_V4_STRESS">Stress</string>
    <string name="INFO_V4_TENSION">Tension</string>
    <string name="INFO_V4_SUSPICIOUS">Suspect</string>
    <string name="INFO_V4_STATUS">Status</string>
    <string name="INFO_NET_STATE_CRITICAL">Critical level %</string>
    <string name="INFO_CFG_FLT">Filters</string>
    <string name="INFO_CFG_FLT_SP">Single points</string>
    <string name="INFO_CFG_FLT_DL">Extended</string>
    <string name="INFO_CFG_FLT_DLF">Extended (fast)</string>
    <string name="INFO_CFG_FLT_STR">Stretch</string>
    <string name="INFO_CFG_FLT_MSCONT">Max speed contour</string>
    <string name="INFO_CFG_FLT_FPS2IN">Downrate</string>
    <string name="INFO_CFG_FLT_AM">Am scale</string>
    <string name="INFO_CFG_FLT_CT">Space</string>
    <string name="INFO_CFG_FLT_DIS">disable *</string>
    <string name="INFO_CFG_FLT_DIS_A">disable Am</string>
    <string name="INFO_CFG_FLT_DIS_B">disable F</string>
    <string name="INFO_CFG_FLT_DIS_2X">disable 2x(fast)</string>
    <string name="INFO_CFG_FLT_DIS_VI0">disable VI(N)</string>
    <string name="INFO_CFG_FLT_DIS_VI1">disable VI(10)</string>
    <string name="INFO_CFG_FLT_DIS_VI2">disable VI(2)</string>
    <string name="INFO_CFG_FLT_DIS_FFTU">disable FFT</string>
    <string name="INFO_CFG_FLT_DIS_ENTR">disable Entropy</string>
    <string name="INFO_CFG_FLT_DIS_AUDIO">disable Audio</string>
    <string name="INFO_CFG_FLT_MOTION">Motion detector</string>
    <string name="INFO_CFG_FLT_MOTION_10X">use 10x</string>
    <string name="INFO_CFG_FLT_MOTION_LEVEL">level</string>
    <string name="INFO_CFG_FLT_MOTION_AUTO_RESET">auto reset</string>
    <string name="INFO_CFG_FLT_NSKIP">skip frames</string>
    <string name="INFO_CFG_FLT_AUTODOWNRATE">Auto downrate</string>
    <string name="INFO_CFG_FLT_CONTOUR_FIXED">Fixed contour</string>
    <string name="INFO_CFG_FLT_CONTOUR_FACE">Face only</string>
    <string name="INFO_CFG_FLT_CONTOUR_VI">VI</string>
    <string name="INFO_CFG_FLT_CONTOUR">Contour mode</string>
    <string name="INFO_CFG_FLT_STABX">Stab. X</string>
    <string name="INFO_CFG_FLT_STABY">Stab. Y</string>
    <string name="INFO_CFG_MISC">Misc</string>
    <string name="INFO_CFG_FACE_DRAW">Draw face</string>
    <string name="INFO_CFG_FACE_MODE">Face mode</string>
    <string name="INFO_CFG_FACE_MODE_INTERNAL">Internal</string>
    <string name="INFO_CFG_FACE_MODE_OPENCV">OpenCV</string>
    <string name="INFO_CFG_XLS_OPEN">Open result XLS</string>
    <string name="INFO_CFG_MAIN">Main</string>
    <string name="INFO_CFG_N">N</string>
    <string name="INFO_CFG_N1">N(10)</string>
    <string name="INFO_CFG_N2">N(2)</string>
    <string name="INFO_CFG_K">K</string>
    <string name="INFO_CFG_TH">L</string>
    <string name="INFO_STATE_LEVEL">State levels</string>
    <string name="INFO_STATE_LEVEL_AG">Ag</string>
    <string name="INFO_STATE_LEVEL_ST">St</string>
    <string name="INFO_STATE_LEVEL_TN">Tn</string>
    <string name="INFO_AUDIO_LEVEL">Audio level</string>
    <string name="INFO_AUDIO_LEVEL25">Audio level (25fps)</string>
    <string name="INFO_CFG_AVG">AVG filter</string>
    <string name="INFO_CFG_AVG_ANGER">Aggression</string>
    <string name="INFO_CFG_AVG_STRESS">Stress</string>
    <string name="INFO_CFG_AVG_TENSION">Tension</string>
    <string name="INFO_CFG_AVG_STATE_SRC">Suspicious</string>
    <string name="INFO_CFG_AVG_ENERGY">Energy</string>
    <string name="INFO_CFG_AVG_COMPAT">Compatibility</string>
    <string name="INFO_CFG_AVG_DANGER">Suspicious</string>
    <string name="INFO_CFG_AVG_BALANCE">Balance</string>
    <string name="INFO_CFG_AVG_CHARMING">Charming</string>
    <string name="INFO_CFG_M">M</string>
    <string name="INFO_CFG_M_PERIOD">M lenght</string>
    <string name="INFO_CFG_M_DELAY">M delay</string>
    <string name="INFO_WND_M_CONFIG">Config</string>
    <string name="INFO_WND_M_T10">T10</string>
    <string name="INFO_STAT_A1X">A1 (fast)</string>
    <string name="INFO_STAT_A4X">A4 (fast)</string>
    <string name="INFO_STAT_A1">A1</string>
    <string name="INFO_STAT_A2">A2</string>
    <string name="INFO_STAT_A3">A3</string>
    <string name="INFO_STAT_A4">A4</string>
    <string name="INFO_STAT_A5">A5</string>
    <string name="INFO_STAT_A6">A6</string>
    <string name="INFO_STAT_A7">A7</string>
    <string name="INFO_STAT_A8">A8</string>
    <string name="INFO_STAT_A9">A9</string>
    <string name="INFO_STAT_F1X">F1 (fast)</string>
    <string name="INFO_STAT_F1D">dF1 (fast)</string>
    <string name="INFO_STAT_F1">F1</string>
    <string name="INFO_STAT_F2">F2</string>
    <string name="INFO_STAT_F3">F3</string>
    <string name="INFO_STAT_F4">F4</string>
    <string name="INFO_STAT_F5XT">F5 tens.</string>
    <string name="INFO_STAT_F5X">F5 (fast)</string>
    <string name="INFO_STAT_F5X_TEXT">Tension/Anxiety (F5X)</string>
    <string name="INFO_STAT_F5">F5</string>
    <string name="INFO_STAT_F6">F6</string>
    <string name="INFO_STAT_F6_TEXT">Inhibition (F6)</string>
    <string name="INFO_STAT_F7">F7</string>
    <string name="INFO_STAT_F8">F8</string>
    <string name="INFO_STAT_F9">F9</string>
    <string name="INFO_STAT_F9_TEXT">Neuroticism (F9)</string>
    <string name="INFO_STAT_S1">S1</string>
    <string name="INFO_STAT_S2">S2</string>
    <string name="INFO_STAT_S3">S3</string>
    <string name="INFO_STAT_S4">S4</string>
    <string name="INFO_STAT_S5">S5</string>
    <string name="INFO_STAT_S6">S6</string>
    <string name="INFO_STAT_S7">S7</string>
    <string name="INFO_STAT_S8">S8</string>
    <string name="INFO_STAT_S9">S9</string>
    <string name="INFO_STAT_P1">P1</string>
    <string name="INFO_STAT_P2">P2</string>
    <string name="INFO_STAT_P3">P3</string>
    <string name="INFO_STAT_P4">P4</string>
    <string name="INFO_STAT_P5">P5 lie</string>
    <string name="INFO_STAT_P6">P6 string.</string>
    <string name="INFO_STAT_P6_TEXT">Stress (P6)</string>
    <string name="INFO_STAT_P7">P7 ang.</string>
    <string name="INFO_STAT_P7_TEXT">Aggression (P7)</string>
    <string name="INFO_STAT_P6A">P6A string.</string>
    <string name="INFO_STAT_P7A">P7A ang.</string>
    <string name="INFO_STAT_P6F">P6F string.</string>
    <string name="INFO_STAT_P7F">P7F ang.</string>
    <string name="INFO_STAT_P8">P8 en.</string>
    <string name="INFO_STAT_P8_TEXT">Energy (P8)</string>
    <string name="INFO_STAT_P8A">P8A en.</string>
    <string name="INFO_STAT_P8F">P8F en.</string>
    <string name="INFO_STAT_P9">P9 H</string>
    <string name="INFO_STAT_P9A">P9A H</string>
    <string name="INFO_STAT_P9F">P9F H</string>
    <string name="INFO_STAT_P10">P10 Δ</string>
    <string name="INFO_STAT_P10A">P10A Δ</string>
    <string name="INFO_STAT_P10F">P10F Δ</string>
    <string name="INFO_STAT_P11">P11 æ</string>
    <string name="INFO_STAT_P11A">P11A æ</string>
    <string name="INFO_STAT_P11F">P11F æ</string>
    <string name="INFO_STAT_P12">P12 S</string>
    <string name="INFO_STAT_P12A">P12A S</string>
    <string name="INFO_STAT_P12F">P12F S</string>
    <string name="INFO_STAT_P13">P13</string>
    <string name="INFO_STAT_P14">P14</string>
    <string name="INFO_STAT_P15">P15</string>
    <string name="INFO_STAT_P16">P16 CN</string>
    <string name="INFO_CFG_QTEST">Quality test</string>
    <string name="INFO_CFG_QTEST_ENABLE">Enable</string>
    <string name="INFO_CFG_QTEST_LEVEL_LIGHT">light level</string>
    <string name="VI_INFO_QTEST_FPS_MIN">FPS min</string>
    <string name="VI_INFO_QTEST_FPS_MAX">FPS max</string>
    <string name="VI_INFO_QTEST_FACE_DELAY">face delay</string>
    <string name="CAM_EDGE_MODE">Edge enhancement</string>
    <string name="CAM_NOISE_REDUCTION_MODE">Noise reduction</string>
    <string name="CAM_LENS_OPTICAL_STABILIZATION_MODE">Optical stabilization</string>
    <string name="CAM_TONEMAP_MODE">Tone map</string>
    <string name="CAM_CONTROL_AF_MODE">AF mode</string>
    <string name="CAM_CONTROL_AWB_MODE">White balance</string>
    <string name="CAM_CONTROL_AE_MODE">Exposure mode</string>
    <string name="CAM_CONTROL_WB_KELVIN">Color Temperature(K)</string>
    <string name="CAM_CONTROL_SCENE_MODE">Scene mode</string>
    <string name="CAM_CONTROL_AE_ANTIBANDING_MODE">Anti banding</string>
    <string name="CAM_CONTROL_EFFECT_MODE">Color effect</string>
</resources>